--- a/style.css
+++ b/style.css
@@ -2,11 +2,15 @@
     width: 100px;
     height: 100px;
     border: 1px solid red;
+
+    transition: 2s;
 }
 .ex-2-square {
     width: 100px;
     height: 100px;
     background: red;
+
+    
 }
 .ex-3-square {
     width: 100px;
@@ -66,4 +70,8 @@
     background: #f5f5f5;
     width: 60px;
     height: 20px;
+}
+
+.ex-1-square:hover {
+    background: red;
 }
