--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
     height: 100px;
     background: red;
 
-    
+    transition: 2s;
 }
 .ex-3-square {
     width: 100px;
@@ -72,6 +72,12 @@
     height: 20px;
 }
 
+/*SOLUZIONI*/
+
 .ex-1-square:hover {
     background: red;
+}
+
+.ex-2-square:hover{
+    width: 100%;
 }
