--- a/style.css
+++ b/style.css
@@ -16,6 +16,8 @@
     width: 100px;
     height: 100px;
     background: red;
+
+    transition: 2s;
 }
 .ex-4-square {
     width: 100px;
@@ -80,4 +82,8 @@
 
 .ex-2-square:hover{
     width: 100%;
+}
+
+.ex-3-square:hover{
+    border-radius: 50%;
 }
