--- a/style.css
+++ b/style.css
@@ -23,6 +23,8 @@
     width: 100px;
     height: 100px;
     background: red;
+
+    transition: 2s;
 }
 .ex-5-square {
     margin: 20px;
@@ -86,4 +88,8 @@
 
 .ex-3-square:hover{
     border-radius: 50%;
+}
+
+.ex-4-square:hover{
+    opacity: 0;
 }
