--- a/style.css
+++ b/style.css
@@ -31,6 +31,8 @@
     width: 60px;
     height: 60px;
     background: red;
+
+    transition: 2s;
 }
 .ex-6-img, .ex-7-img, .ex-8-img {
     width: 500px;
@@ -92,4 +94,12 @@
 
 .ex-4-square:hover{
     opacity: 0;
+}
+
+.ex-5-square:hover{
+    transform: scale(2);
+}
+
+.ex-5-square:active{
+    transform: scale(.2);
 }
