--- a/style.css
+++ b/style.css
@@ -36,6 +36,8 @@
 }
 .ex-6-img, .ex-7-img, .ex-8-img {
     width: 500px;
+
+    transition: 2s;
 }
 
 .ex-9-img {
@@ -102,4 +104,8 @@
 
 .ex-5-square:active{
     transform: scale(.2);
+}
+
+.ex-6-img:hover{
+    filter: grayscale(2);
 }
