--- a/style.css
+++ b/style.css
@@ -43,6 +43,8 @@
 .ex-9-img {
     margin: 50px 100px;
     width: 400px;
+
+    transition: 2s;
 }
 .ex-10-icon {
     font-size: 60px;
@@ -117,4 +119,10 @@
 .ex-8-img:hover{
     filter: grayscale(2) saturate(4);
     border-radius: 50%;
+}
+
+.ex-9-img:hover{
+    filter: grayscale(2) saturate(4);
+    border-radius: 50%;
+    transform: scale(2);
 }
