--- a/style.css
+++ b/style.css
@@ -48,9 +48,12 @@
 }
 .ex-10-icon {
     font-size: 60px;
+    animation: rotate 1s infinite;
 }
 .ex-11-icon {
     font-size: 60px;
+
+    animation: rotate-return 2s;
 }
 .ex-12-button, .ex-13-button {
     position: relative;
@@ -125,4 +128,10 @@
     filter: grayscale(2) saturate(4);
     border-radius: 50%;
     transform: scale(2);
+}
+
+@keyframes rotate{
+    0%{
+        transform: rotate(1turn);
+    }
 }
