--- a/style.css
+++ b/style.css
@@ -150,6 +150,18 @@
     animation: rotate-return 2s;
 }
 
-.ex-12-top-white:hover {
+.ex-12-button:hover .ex-12-bottom-white{
     animation: white-move 2s;
+}
+
+@keyframes white-move {
+    0% {
+        right: 20%;
+    }
+    50% {
+        right: 50%;
+    }
+    100% {
+        right: 20%;
+    }
 }
