--- a/style.css
+++ b/style.css
@@ -165,3 +165,34 @@
         right: 20%;
     }
 }
+
+.ex-13-button:hover .ex-13-top-white {
+    animation: move-white-full 2s;
+}
+
+@keyframes move-white-full {
+    0% {
+        left: 10%;
+        top: -10px;
+    }
+    30% {
+        left: calc(100% - 30px);
+        top: -10px;
+    }
+    45% {
+        left: calc(100% - 30px);
+        top: 100%;
+    }
+    75% {
+        left: 0;
+        top: 100%;
+    }
+    90% {
+        left: -15px;
+        top: -10px;
+    }
+    100% {
+        left: 10%;
+        top: -10px;
+    }
+}
